<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/googleregular"
        android:text="@string/welcome"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:typeface="normal"
        android:inputType="none"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/googlebold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_gravity="center_horizontal"
        android:textIsSelectable="false"
        android:textSize="48sp"
        android:typeface="normal"
        android:inputType="none"
        android:gravity="center_horizontal" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="190dp"
        android:layout_marginTop="40dp"
        android:scaleType="fitCenter"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/pcvector" />

    <TextView
        android:id="@+id/editTextTextMultiLine3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/googleregular"
        android:text="@string/shopkeepers"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:text="@string/we_are_here"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/googleregular"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/googleregular"
        android:text="@string/select_components"
        android:textSize="14sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/googleregular"
        android:text="@string/deliver"
        android:textSize="14sp" />
    <Button
        android:id="@+id/get_started"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="#B4B2F4"
        android:textSize="13sp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/sfprosemibold"
        android:hapticFeedbackEnabled="true"
        android:shadowDx="0"
        android:layout_marginTop="20dp"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/start"
        android:textColor="@color/black"
        app:cornerRadius="50dp" />
</LinearLayout>
</ScrollView>