<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".LoginSignUpActivity">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/googleregular"
            android:text="@string/welcome"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:typeface="normal"
            android:inputType="none"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/googlebold"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:textIsSelectable="false"
            android:textSize="48sp"
            android:typeface="normal"
            android:inputType="none"
            android:gravity="center_horizontal" />
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="350dp"
            android:layout_height="190dp"
            android:layout_marginTop="40dp"
            android:scaleType="fitCenter"
            android:layout_gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/pcvector" />
        <TextView
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:text="@string/know"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/googleregular"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:text="@string/first_time"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:fontFamily="@font/googleregular"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="300dp"
            android:layout_height="41dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_bg"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/googleregular"
            android:autofillHints="emailAddress"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="300dp"
            android:layout_height="41dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_bg"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/googleregular"
            android:autofillHints="emailAddress"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="15sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/signin"
                android:layout_width="133dp"
                android:layout_height="70dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="#B4B2F4"
                android:fontFamily="@font/sfprosemibold"
                android:hapticFeedbackEnabled="true"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="10"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                app:cornerRadius="50dp" />
            <Button
                android:id="@+id/signup"
                android:layout_width="133dp"
                android:layout_height="70dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="45dp"
                android:backgroundTint="#E7E7E7"
                android:fontFamily="@font/sfprosemibold"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="10"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                app:cornerRadius="50dp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/google_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_below="@+id/or"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/google_button"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/google_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:textAlignment="center"
                android:text="Continue with Google"
                android:textColor="@color/black"
                android:gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
