<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BudgetActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/googleregular"
        android:text="@string/start_2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/googlebold"
        android:text="@string/want"
        android:textAlignment="center"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="34sp"
        android:typeface="normal"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        android:gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/googlebold"
        android:text="@string/budget"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:gravity="center_horizontal"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/budget_slider"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:stepSize="5000"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:valueFrom="0"
        android:valueTo="300000" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/googlebold"
            android:text="₹"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="@dimen/_10ssp"
            android:gravity="center_horizontal"
            tools:ignore="RtlCompat" />
        <TextView
            android:id="@+id/currentValue"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/googlebold"
            android:text="0"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="@dimen/_10ssp"
            android:gravity="center_horizontal"
            tools:ignore="RtlCompat" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_100sdp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/googlebold"
            android:text="₹"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="@dimen/_10ssp"
            android:gravity="center_horizontal"
            tools:ignore="RtlCompat" />
        <TextView
            android:id="@+id/maxValue"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/googlebold"
            android:text="350000"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="@dimen/_10ssp"
            android:gravity="center_horizontal"
            tools:ignore="RtlCompat" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/googlebold"
        android:text="@string/breed"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="@font/googleregular"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/kind"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="@dimen/_12ssp"
        android:gravity="center_horizontal" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/button_bg"
        android:minHeight="35dp"
        android:paddingLeft="5dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingRight="5dp"
        android:gravity="start|center">
        <Spinner
            android:id="@+id/spType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/googlebold"
        android:text="Which side are you on?"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="@font/googleregular"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="Team Intel or Team AMD?"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textAlignment="center"
        android:visibility="gone"
        android:textColor="#000000"
        android:textSize="@dimen/_12ssp"
        android:gravity="center_horizontal" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/button_bg"
        android:minHeight="35dp"
        android:visibility="gone"
        android:paddingLeft="5dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingRight="5dp"
        android:gravity="start|center">
        <Spinner
            android:id="@+id/spSide"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:id="@+id/roll"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:backgroundTint="#B4B2F4"
        android:textSize="13sp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/sfprosemibold"
        android:hapticFeedbackEnabled="true"
        android:shadowDx="0"
        android:layout_marginTop="140dp"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="Let's Roll"
        android:textColor="@color/black"
        app:cornerRadius="50dp" />
    <Button
        android:id="@+id/confused"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="45dp"
        android:backgroundTint="#E7E7E7"
        android:fontFamily="@font/sfprosemibold"
        android:shadowDx="0"
        android:textSize="13sp"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="I am confused what to select"
        android:textColor="@color/black"
        app:cornerRadius="50dp" />
</LinearLayout>
</ScrollView>